--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .shadow{
     -webkit-box-shadow: 2px -1px 17px -4px rgba(0,0,0,0.28);
@@ -9,7 +9,7 @@ border-radius: 20px;
 background-color: white;
     }
 
-.font{font-family: 'Poppins', sans-serif;}    
+.font{font-family: 'PT Sans', sans-serif;}    
 
 
     .inp-shadow{
@@ -36,4 +36,4 @@ border-radius: 9px;
   border:1px solid red;
   transform: scale(1.1);
   transition: 0.2s;
-}  
+}
