--- a/APP/BIN/button.css
+++ b/APP/BIN/button.css
@@ -1,5 +1,5 @@
 .btn {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'PT Sans', sans-serif;
     background-color: #ffffff4a;
     color: #fffafa;
     border: 1px solid #949494;
